--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <title>Inicio</title>
 
     <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
     <!-- un-comment this code to enable service worker
     <script>
@@ -48,5 +49,6 @@
       have templates inline in this html file if you'd like).
     -->
     <ion-nav-view></ion-nav-view>
+   <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
   </body>
 </html>
